multi-container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-container-deployment
  labels:
    app: multi-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-container
  template:
    metadata:
      labels:
        app: multi-container
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
      - name: postgres
        image: postgres:alpine
        ports:
        - containerPort: 5432
      - name: mysql
        image: mysql:8
        ports:
        - containerPort: 3306
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
      - name: elasticsearch
        image: elasticsearch:8.11.0
        ports:
        - containerPort: 9200
      - name: rabbitmq
        image: rabbitmq:management-alpine
        ports:
        - containerPort: 5672
        - containerPort: 15672
      - name: memcached
        image: memcached:alpine
        ports:
        - containerPort: 11211
      - name: httpd
        image: httpd:alpine
        ports:
        - containerPort: 8080
      - name: busybox
        image: busybox:latest
        command: ["sleep", "3600"]
